--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,4 +41,12 @@ body {
 .animate-text-slide {
   animation: textSlide 0.6s ease-out;
 }
+/* globals.css */
+.no-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE 10+ */
+  scrollbar-width: none;     /* Firefox */
+}
 
